# chartify

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  buttons.py  chart_widgets.py  eso_file_header.py  eso_file_widget.py  icon_painter.py  icons.py  main.py  modern_window.py  progress_widget.py  pyproject.toml  requirements.txt  result.py  setup.py  tester.py  threads.py  view_widget.py  widgets.py
chartify/: settings.py
chartify/charts/: _charts.py  chart.py  chart_functions.py  chart_settings.py  charts.py  trace.py
chartify/controller/: app_controller.py  file_processing.py  process_utils.py  progress_logging.py  threads.py  wv_controller.py
chartify/model/: model.py
chartify/ui/: buttons.py  css_theme.py  dialogs.py  drop_frame.py  icon_painter.py  icons.py  main_window.py  misc_widgets.py  progress_widget.py  simpleview.py  stacked_widget.py  tab_widget.py  toolbar.py  treeview.py  treeview_model.py  treeview_tools.py  treeview_widget.py  (+1 more)
esopie/: __init__.py  app.py  buttons.py  chart_settings.py  chart_widgets.py  charts.py  controller.py  css_theme.py  eso_file_header.py  icons.py  main.py  main_window.py  misc_widgets.py  model.py  plot.py  progress_widget.py  settings.py  threads.py  toolbar.py  trace.py  view_functions.py  view_tools.py  view_widget.py  widgets.py
resources/: default.json
scripts/: build_reader.cmd  build_reader.py
styles/: app_style.css  palettes.json
tests/: __init__.py  chart_layout_tests.py  conftest.py  fixtures.py  mock_settings.py  test_main.py  test_progress_widget.py
(+105 files in other folders)
